Major portfolio update with enhanced UI, new hero sections, and improved metadata grids

--- a/projects/ai-engagement-platform/index.html
+++ b/projects/ai-engagement-platform/index.html
@@ -212,10 +212,45 @@
     </div>
   </main>
 
-  <!-- Footer -->
-  <footer class="footer light">
-    <div class="container">
-      <p class="copyright" data-animation="fade-in" data-animation-delay="0.5">© 2025 Miguel Rodriguez</p>
+  <!-- Footer with Animated Links -->
+  <footer class="site-footer">
+    <div class="footer-container">
+
+      <!-- Contact Form -->
+      <div class="footer-contact">
+        <h3>Contact Me</h3>
+        <form action="mailto:miguelrodfhercareer@gmail.com" method="POST" enctype="text/plain">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <textarea name="message" placeholder="Your Message" required></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+
+      <!-- Social Links -->
+      <div class="footer-socials">
+        <h3>Follow</h3>
+        <ul>
+          <li><a href="https://www.instagram.com/wildinguavatown/" target="_blank">Instagram</a></li>
+          <li><a href="https://www.linkedin.com/in/miguelrodfher/" target="_blank">LinkedIn</a></li>
+          <li><a href="https://drive.google.com/file/d/1L22V9WR8WKYCG6kzf2e18L1GTn4GuRDZ/view?usp=drive_link" target="_blank">Download Resume</a></li>
+        </ul>
+      </div>
+
+    </div>
+
+    <!-- Disclaimer -->
+    <div class="footer-disclaimer">
+      <p>
+        <em>
+          Disclaimer: Some projects featured are representative recreations of real-world work completed for proprietary corporate clients. Due to confidentiality and intellectual property restrictions, full details and visuals cannot be disclosed. To maintain narrative and visual continuity, select images and design assets are AI-generated. Exceptions include the "Wine Discovery Experience" and "Château des Vallées de la Rose" branding, which are personal creative projects.
+        </em>
+      </p>
+    </div>
+
+    <!-- Copyright -->
+    <div class="footer-bottom">
+      <p>© 2025 Miguel Rodriguez</p>
     </div>
   </footer>
 
