--- a/projects/url-content-analyzer/index.html
+++ b/projects/url-content-analyzer/index.html
@@ -86,11 +86,11 @@
         </div>
         <div class="metadata-item">
           <h3>My Role</h3>
-          <p>Frontend Developer & UX Designer</p>
+          <p>Project Architect, Frontend Developer & UX Designer</p>
         </div>
         <div class="metadata-item">
           <h3>Timeline</h3>
-          <p>4 Weeks (2023)</p>
+          <p>8 Weeks (2025)</p>
         </div>
         <div class="metadata-item">
           <h3>Technologies</h3>
@@ -439,9 +439,44 @@ function createContentDistributionChart(data, containerId) {
   </main>
 
   <!-- Footer -->
-  <footer class="footer light">
-    <div class="container">
-      <p class="copyright" data-animation="fade-in" data-animation-delay="0.5">© 2025 Miguel Rodriguez</p>
+  <footer class="site-footer">
+    <div class="footer-container">
+
+      <!-- Contact Form -->
+      <div class="footer-contact">
+        <h3>Contact Me</h3>
+        <form action="mailto:miguelrodfhercareer@gmail.com" method="POST" enctype="text/plain">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <textarea name="message" placeholder="Your Message" required></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+
+      <!-- Social Links -->
+      <div class="footer-socials">
+        <h3>Follow</h3>
+        <ul>
+          <li><a href="https://www.instagram.com/wildinguavatown/" target="_blank">Instagram</a></li>
+          <li><a href="https://www.linkedin.com/in/miguelrodfher/" target="_blank">LinkedIn</a></li>
+          <li><a href="https://drive.google.com/file/d/1L22V9WR8WKYCG6kzf2e18L1GTn4GuRDZ/view?usp=drive_link" target="_blank">Download Resume</a></li>
+        </ul>
+      </div>
+
+    </div>
+
+    <!-- Disclaimer -->
+    <div class="footer-disclaimer">
+      <p>
+        <em>
+          Disclaimer: Some projects featured are representative recreations of real-world work completed for proprietary corporate clients. Due to confidentiality and intellectual property restrictions, full details and visuals cannot be disclosed. To maintain narrative and visual continuity, select images and design assets are AI-generated. Exceptions include the "Wine Discovery Experience" and "Château des Vallées de la Rose" branding, which are personal creative projects.
+        </em>
+      </p>
+    </div>
+
+    <!-- Copyright -->
+    <div class="footer-bottom">
+      <p>© 2025 Miguel Rodriguez</p>
     </div>
   </footer>
 
@@ -449,9 +484,7 @@ function createContentDistributionChart(data, containerId) {
   <div class="custom-cursor">
     <div class="cursor-dot"></div>
     <div class="cursor-outline"></div>
-  </div>
-  
-  <!-- Scripts -->
+  </div>  <!-- Scripts -->
   <script src="./scripts.js"></script>
 </body>
 </html>
